build: add dockerfile and run command for web app in dev mode

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:docker": "docker-compose -f docker-compose.dev.yml up --build",
     "build": "next build",
     "start": "next start"
   },
