--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -25,3 +25,15 @@ services:
     env_file:
       - .env
 
+  web:
+    container_name: prodeko-seminar-web
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
+    volumes:
+      - ./:/usr/src/app
+    ports:
+      - 3000:3000
+    network_mode: host
+    depends_on:
+      - directus
