--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.2.0",
+    "react-player": "^2.9.0",
     "styled-components": "5.2.1"
   },
   "devDependencies": {
