--- a/package.json
+++ b/package.json
@@ -11,16 +11,20 @@
   },
   "dependencies": {
     "@directus/sdk-js": "9.0.0-rc.51",
+    "js-cookie": "2.2.1",
     "next": "10.0.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-icons": "^4.2.0",
-    "react-player": "^2.9.0",
+    "react-icons": "4.2.0",
+    "react-modal": "3.12.1",
+    "react-player": "2.9.0",
     "styled-components": "5.2.1"
   },
   "devDependencies": {
+    "@types/js-cookie": "2.2.6",
     "@types/node": "14.14.35",
     "@types/react": "17.0.3",
+    "@types/react-modal": "3.12.0",
     "@types/styled-components": "5.1.9",
     "@typescript-eslint/eslint-plugin": "4.18.0",
     "@typescript-eslint/parser": "4.18.0",
