--- a/package.json
+++ b/package.json
@@ -11,17 +11,16 @@
   },
   "dependencies": {
     "@directus/sdk-js": "9.0.0-rc.51",
-    "js-cookie": "2.2.1",
     "next": "10.0.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "4.2.0",
     "react-modal": "3.12.1",
     "react-player": "2.9.0",
+    "react-use": "17.2.1",
     "styled-components": "5.2.1"
   },
   "devDependencies": {
-    "@types/js-cookie": "2.2.6",
     "@types/node": "14.14.35",
     "@types/react": "17.0.3",
     "@types/react-modal": "3.12.0",
