--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "4.2.0",
     "react-modal": "3.12.1",
     "react-player": "2.9.0",
+    "react-quill": "2.0.0-beta.2",
     "react-use": "17.2.1",
     "styled-components": "5.2.1"
   },
