--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@directus/sdk-js": "9.0.0-rc.51",
+    "framer-motion": "4.0.3",
     "next": "10.0.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
