--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@directus/sdk-js": "9.0.0-rc.51",
     "framer-motion": "4.0.3",
+    "he": "1.2.0",
     "next": "10.0.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -23,6 +24,7 @@
     "styled-components": "5.2.1"
   },
   "devDependencies": {
+    "@types/he": "1.1.1",
     "@types/node": "14.14.35",
     "@types/react": "17.0.3",
     "@types/react-modal": "3.12.0",
