feat: update env template

--- a/env.example
+++ b/env.example
@@ -1,4 +1,8 @@
 # Copy and rename this file to .env
+# Set variables according to desired environment
+
+# Use either "dev" or "prod"
+ENV="dev"
 
 # ############################## #
 # Secrets for database container #
@@ -18,7 +22,7 @@ SECRET="generate-these-for-prod-use"
 PUBLIC_URL="http://localhost:8055"
 
 DB_CLIENT="pg"
-DB_HOST="database"
+DB_HOST="localhost"
 DB_PORT="5432"
 # ENSURE THESE MATCH THE DATABASE VALUES
 DB_DATABASE="prodeko-seminar-dev"
@@ -44,5 +48,5 @@ OAUTH_PRODEKO_SECRET="AjKlvv9vg3UgZH4JejLl55OFCZDnioJAKDhqvW6O9V9n45px9JTLL82ZDT
 # Secrets for Next.js container #
 # ############################# #
 
-SERVER_API_URL="http://directus:8055"
+SERVER_API_URL="http://localhost:8055"
 NEXT_PUBLIC_API_URL="http://localhost:8055"
