wip: fixing makefile

--- a/env.example
+++ b/env.example
@@ -21,6 +21,8 @@ KEY="generate-these-for-prod-use"
 SECRET="generate-these-for-prod-use"
 PUBLIC_URL="http://localhost:8055"
 
+API_HOST="localhost"
+API_PORT="8055"
 DB_CLIENT="pg"
 DB_HOST="localhost"
 DB_PORT="5432"
