--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   },
   "dependencies": {
     "@directus/sdk-js": "9.0.0-rc.51",
+    "@sentry/browser": "^6.2.4",
+    "@sentry/integrations": "^6.2.4",
+    "@sentry/node": "^6.2.4",
+    "@sentry/webpack-plugin": "^1.14.2",
     "framer-motion": "4.0.3",
     "he": "1.2.0",
     "next": "10.0.9",
