fix: env var comments on new lines

--- a/env.example
+++ b/env.example
@@ -21,10 +21,12 @@ KEY="generate-these-for-prod-use"
 SECRET="generate-these-for-prod-use"
 PUBLIC_URL="http://localhost:8055"
 
-API_HOST="localhost" # Change to "directus" for local prod build!
+# Change to "directus" for local prod build!
+API_HOST="localhost"
 API_PORT="8055"
 DB_CLIENT="pg"
-DB_HOST="localhost" # Change to "database" for local prod build!
+# Change to "database" for local prod build!
+DB_HOST="localhost"
 DB_PORT="5432"
 # ENSURE THESE MATCH THE DATABASE VALUES
 DB_DATABASE="prodeko-seminar-dev"
@@ -50,5 +52,6 @@ OAUTH_PRODEKO_SECRET="AjKlvv9vg3UgZH4JejLl55OFCZDnioJAKDhqvW6O9V9n45px9JTLL82ZDT
 # Secrets for Next.js container #
 # ############################# #
 
-SERVER_API_URL="http://localhost:8055" # Change "localhost" to "directus" for local prod build!
+# Change "localhost" to "directus" for local prod build!
+SERVER_API_URL="http://localhost:8055"
 NEXT_PUBLIC_API_URL="http://localhost:8055"
