--- a/docker-compose.stag.yml
+++ b/docker-compose.stag.yml
@@ -1,16 +1,16 @@
 version: '3.4'
 services:
-  database:
+  seminar_database:
     networks:
       - prodeko-seminar
 
-  directus:
+  seminar_cms:
     ports:
       - 8055:8055
     networks:
       - prodeko-seminar
 
-  web:
+  seminar_web:
     container_name: prodeko-seminar-web
     build:
       network: prodeko-seminar_prodeko-seminar
