--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3.4'
 services:
-  database:
+  seminaari_database:
     container_name: prodeko-seminar-database
     image: postgres:12
     volumes:
@@ -8,7 +8,7 @@ services:
     env_file:
       - .env
 
-  directus:
+  seminaari_cms:
     container_name: prodeko-seminar-cms
     image: directus/directus:v9.0.0-rc.51
     volumes:
@@ -19,7 +19,7 @@ services:
     env_file:
       - .env
 
-  web:
+  seminaari_web:
     container_name: prodeko-seminar-web
     build:
       context: .
