fix: namings in docker-compose

--- a/env.example
+++ b/env.example
@@ -21,11 +21,11 @@ KEY="generate-these-for-prod-use"
 SECRET="generate-these-for-prod-use"
 PUBLIC_URL="http://localhost:8055"
 
-# Change to "directus" for local prod build!
+# Change to "seminar_cms" for local prod build!
 API_HOST="localhost"
 API_PORT="8055"
 DB_CLIENT="pg"
-# Change to "database" for local prod build!
+# Change to "seminar_database" for local prod build!
 DB_HOST="localhost"
 DB_PORT="5432"
 # ENSURE THESE MATCH THE DATABASE VALUES
@@ -52,6 +52,6 @@ OAUTH_PRODEKO_SECRET="get-this-from-secrets"
 # Secrets for Next.js container #
 # ############################# #
 
-# Change "localhost" to "directus" for local prod build!
+# Change "localhost" to "seminar_cms" for local prod build!
 SERVER_API_URL="http://localhost:8055"
 NEXT_PUBLIC_API_URL="http://localhost:8055"
