feat: add server migration url to scripts

--- a/env.example
+++ b/env.example
@@ -54,4 +54,5 @@ OAUTH_PRODEKO_SECRET="get-this-from-secrets"
 
 # Change "localhost" to "seminar_cms" for local prod build!
 SERVER_API_URL="http://localhost:8055"
+SERVER_MIGRATION_URL="http://localhost:8055"
 NEXT_PUBLIC_API_URL="http://localhost:8055"
