--- a/env.example
+++ b/env.example
@@ -1,51 +1,51 @@
 # Copy and rename this file to .env
 # Set variables according to desired environment
 
-# Use either "dev" or "prod"
-ENV="dev"
+# Use either "dev" or "stag" (for staging)
+ENV=dev
 
 # ############################## #
 # Secrets for database container #
 # ############################## #
 
-POSTGRES_DB="prodeko-seminar-dev"
-POSTGRES_USER="prodev"
-POSTGRES_PASSWORD="prodev-pass"
+POSTGRES_DB=prodeko-seminar-dev
+POSTGRES_USER=prodev
+POSTGRES_PASSWORD=prodev-pass
 
 
 # ############################## #
 # Secrets for Directus container #
 # ############################## #
 
-KEY="generate-these-for-prod-use"
-SECRET="generate-these-for-prod-use"
-PUBLIC_URL="http://localhost:8055"
+KEY=generate-these-for-prod-use
+SECRET=generate-these-for-prod-use
+PUBLIC_URL=http://localhost:8055
 
 # Change to "seminar_cms" for local prod build!
-API_HOST="localhost"
-API_PORT="8055"
-DB_CLIENT="pg"
+API_HOST=seminar_cms
+API_PORT=8055
+DB_CLIENT=pg
 # Change to "seminar_database" for local prod build!
-DB_HOST="localhost"
-DB_PORT="5432"
+DB_HOST=seminar_database
+DB_PORT=5432
 # ENSURE THESE MATCH THE DATABASE VALUES
-DB_DATABASE="prodeko-seminar-dev"
-DB_USER="prodev"
-DB_PASSWORD="prodev-pass"
+DB_DATABASE=prodeko-seminar-dev
+DB_USER=prodev
+DB_PASSWORD=prodev-pass
 
-ADMIN_EMAIL="dev@prodeko.org"
-ADMIN_PASSWORD="lihamaito"
+ADMIN_EMAIL=dev@prodeko.org
+ADMIN_PASSWORD=lihamaito
 
-OAUTH_PROVIDERS="prodeko"
-OAUTH_PRODEKO_OAUTH="2"
+OAUTH_PROVIDERS=prodeko
+OAUTH_PRODEKO_OAUTH=2
 OAUTH_PRODEKO_SCOPE="read write"
 OAUTH_PRODEKO_RESPONSE="tokens profile"
-OAUTH_PRODEKO_AUTHORIZE_URL="http://localhost:8000/oauth2/auth"
-OAUTH_PRODEKO_ACCESS_URL="http://localhost:8000/oauth2/token"
-OAUTH_PRODEKO_PROFILE_URL="http://localhost:8000/oauth2/user_details/"
-OAUTH_PRODEKO_REDIRECT_URI="http://localhost:3000/"
-OAUTH_PRODEKO_KEY="get-this-from-secrets"
-OAUTH_PRODEKO_SECRET="get-this-from-secrets"
+OAUTH_PRODEKO_AUTHORIZE_URL=http://localhost:8000/oauth2/auth
+OAUTH_PRODEKO_ACCESS_URL=http://localhost:8000/oauth2/token
+OAUTH_PRODEKO_PROFILE_URL=http://localhost:8000/oauth2/user_details/
+OAUTH_PRODEKO_REDIRECT_URI=http://localhost:3000/
+OAUTH_PRODEKO_KEY=get-this-from-secrets
+OAUTH_PRODEKO_SECRET=get-this-from-secrets
 
 
 # ############################# #
@@ -53,6 +53,6 @@ OAUTH_PRODEKO_SECRET="get-this-from-secrets"
 # ############################# #
 
 # Change "localhost" to "seminar_cms" for local prod build!
-SERVER_API_URL="http://localhost:8055"
-SERVER_MIGRATION_URL="http://localhost:8055"
-NEXT_PUBLIC_API_URL="http://localhost:8055"
+SERVER_API_URL=http://seminar_cms:8055
+SERVER_MIGRATION_URL=http://localhost:8055
+NEXT_PUBLIC_API_URL=http://localhost:8055
