--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,7 +1,13 @@
 version: '3.4'
 services:
+  seminar_cms:
+    ports:
+      - 8055:8055
+
   seminar_web:
     build:
       dockerfile: Dockerfile.dev
     volumes:
       - ./:/usr/src/app
+    ports:
+      - 3000:3000
