fix: lock sentry versions and downgrade next.js

--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
   },
   "dependencies": {
     "@directus/sdk-js": "9.0.0-rc.51",
-    "@sentry/browser": "^6.2.4",
-    "@sentry/integrations": "^6.2.4",
-    "@sentry/node": "^6.2.4",
-    "@sentry/tracing": "^6.2.4",
-    "@sentry/webpack-plugin": "^1.14.2",
+    "@sentry/browser": "6.2.4",
+    "@sentry/integrations": "6.2.4",
+    "@sentry/node": "6.2.4",
+    "@sentry/tracing": "6.2.4",
+    "@sentry/webpack-plugin": "1.14.2",
     "framer-motion": "4.0.3",
     "he": "1.2.0",
-    "next": "10.0.9",
+    "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "4.2.0",
