--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@typescript-eslint/eslint-plugin": "4.18.0",
     "@typescript-eslint/parser": "4.18.0",
     "babel-plugin-styled-components": "1.12.0",
+    "deep-object-diff": "1.1.0",
     "diff-arrays-of-objects": "1.1.7",
     "dotenv": "8.2.0",
     "eslint": "7.22.0",
