--- a/env.example
+++ b/env.example
@@ -1,7 +1,9 @@
 # Copy and rename this file to .env
 # Set variables according to desired environment
 
-# Use either "dev" or "stag" (for staging)
+# Use either "dev" or "stag". Main differences:
+# - "dev" mounts the local filesystem for hot reloading and does a dev build
+# - "stag" emulates production environment with a proper prod build
 ENV=dev
 
 # ############################## #
@@ -21,12 +23,10 @@ KEY=generate-these-for-prod-use
 SECRET=generate-these-for-prod-use
 PUBLIC_URL=http://localhost:8055
 
-# Change to "seminar_cms" for local prod build!
-API_HOST=seminar_cms
+API_HOST=localhost
 API_PORT=8055
 DB_CLIENT=pg
-# Change to "seminar_database" for local prod build!
-DB_HOST=seminar_database
+DB_HOST=localhost
 DB_PORT=5432
 # ENSURE THESE MATCH THE DATABASE VALUES
 DB_DATABASE=prodeko-seminar-dev
@@ -52,7 +52,6 @@ OAUTH_PRODEKO_SECRET=get-this-from-secrets
 # Secrets for Next.js container #
 # ############################# #
 
-# Change "localhost" to "seminar_cms" for local prod build!
-SERVER_API_URL=http://seminar_cms:8055
+SERVER_API_URL=http://localhost:8055
 SERVER_MIGRATION_URL=http://localhost:8055
 NEXT_PUBLIC_API_URL=http://localhost:8055
