feat: add sentry config base to env.example

--- a/env.example
+++ b/env.example
@@ -55,3 +55,15 @@ OAUTH_PRODEKO_SECRET=get-this-from-secrets
 SERVER_API_URL=http://localhost:8055
 SERVER_MIGRATION_URL=http://localhost:8055
 NEXT_PUBLIC_API_URL=http://localhost:8055
+
+
+# #################### #
+# Sentry configuration #
+# #################### #
+
+# Set these on the production server
+NEXT_PUBLIC_SENTRY_DSN=
+NEXT_PUBLIC_SENTRY_SERVER_ROOT_DIR=
+SENTRY_ORG=
+SENTRY_PROJECT=
+SENTRY_AUTH_TOKEN=
