--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-player": "2.9.0",
     "react-quill": "2.0.0-beta.2",
     "react-use": "17.2.1",
-    "styled-components": "5.2.1"
+    "styled-components": "5.2.1",
+    "swr": "0.5.5"
   },
   "devDependencies": {
     "@types/he": "1.1.1",
