--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
     "migrate:generate": "ts-node -P tsconfig.scripts.json ./scripts/generateDataMigrations.ts",
     "migrate:diff": "ts-node -P tsconfig.scripts.json ./scripts/diffDataMigrations.ts",
     "migrate:save": "mv ./directus/schema.current.json ./directus/schema.json",
-    "migrate:apply": "ts-node -P tsconfig.scripts.json ./scripts/applyDataMigrations.ts"
+    "migrate:apply": "ts-node -P tsconfig.scripts.json ./scripts/applyDataMigrations.ts",
+    "prepare": "husky install",
+    "pre-commit": "tsc --noEmit && lint-staged"
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx,jsx}": [
+      "eslint . --fix"
+    ]
   },
   "dependencies": {
     "@directus/sdk-js": "9.0.0-rc.51",
@@ -54,6 +61,8 @@
     "eslint-plugin-react": "7.22.0",
     "eslint-plugin-react-hooks": "4.2.0",
     "eslint-plugin-simple-import-sort": "7.0.0",
+    "husky": "^6.0.0",
+    "lint-staged": "10.5.4",
     "next-transpile-modules": "6.3.0",
     "prettier": "2.2.1",
     "ts-node": "9.1.1",
