--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "lint-staged": {
     "*.{js,ts,tsx,jsx}": [
-      "eslint . --fix"
+      "eslint --fix"
     ]
   },
   "dependencies": {
