--- a/env.example
+++ b/env.example
@@ -10,7 +10,7 @@ ENV=dev
 # Secrets for database container #
 # ############################## #
 
-POSTGRES_DB=prodeko-seminar-dev
+POSTGRES_DB=talks-dev
 POSTGRES_USER=prodev
 POSTGRES_PASSWORD=prodev-pass
 
@@ -29,7 +29,7 @@ DB_CLIENT=pg
 DB_HOST=localhost
 DB_PORT=5432
 # ENSURE THESE MATCH THE DATABASE VALUES
-DB_DATABASE=prodeko-seminar-dev
+DB_DATABASE=talks-dev
 DB_USER=prodev
 DB_PASSWORD=prodev-pass
 
