--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,31 @@
 version: '3.4'
 services:
-  talks-database:
-    container_name: talks-database
+  talks_database:
+    container_name: talks_database
     image: postgres:12
     volumes:
       - ./data/database:/var/lib/postgresql/data
     env_file:
       - .env
 
-  talks-cms:
-    container_name: talks-cms
+  talks_cms:
+    container_name: talks_cms
     image: directus/directus:v9.0.0-rc.51
     volumes:
       - ./directus/extensions:/directus/extensions
       - ./directus/uploads:/directus/uploads
     depends_on:
-      - talks-database
+      - talks_database
     env_file:
       - .env
 
-  talks-web:
-    container_name: talks-web
+  talks_web:
+    container_name: talks_web
     build:
       context: .
       dockerfile: Dockerfile
     depends_on:
-      - talks-cms
+      - talks_cms
     env_file:
       - .env
 
