--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,12 +1,12 @@
 version: '3.4'
 services:
-  talks_database:
+  talks-database:
     network_mode: host
 
-  talks_cms:
+  talks-cms:
     network_mode: host
 
-  talks_web:
+  talks-web:
     build:
       dockerfile: Dockerfile.dev
       network: host
