--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,11 +1,11 @@
 version: '3.4'
 services:
-  talks_cms:
+  talks-cms:
     ports:
       - 8055:8055
     restart: unless-stopped
 
-  talks_web:
+  talks-web:
     build:
       network: prodeko-docker-net
     restart: unless-stopped
