--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3.4'
 services:
-  talks_database:
+  talks-database:
     container_name: talks_database
     image: postgres:12
     volumes:
@@ -8,24 +8,24 @@ services:
     env_file:
       - .env
 
-  talks_cms:
+  talks-cms:
     container_name: talks_cms
     image: directus/directus:v9.0.0-rc.51
     volumes:
       - ./directus/extensions:/directus/extensions
       - ./directus/uploads:/directus/uploads
     depends_on:
-      - talks_database
+      - talks-database
     env_file:
       - .env
 
-  talks_web:
+  talks-web:
     container_name: talks_web
     build:
       context: .
       dockerfile: Dockerfile
     depends_on:
-      - talks_cms
+      - talks-cms
     env_file:
       - .env
 
