--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "make run",
     "dev:in-container": "next dev",
     "build": "next build",
-    "build:extensions": "(git submodule update --init --recursive && cd directus/extensions/interfaces/conditional-fields && npm install && npm run build && cp dist/index.js index.js)",
+    "build:extensions": "git submodule update --init --recursive && npm run build:conditional-fields && npm run build:search-sync",
+    "build:conditional-fields": "(cd directus/extensions/interfaces/conditional-fields && npm install && npm run build && cp dist/index.js index.js)",
+    "build:search-sync": "(cd directus/extensions/hooks/search-sync && npm install && cp ../../../../search-config.json config.json)",
     "start": "make run",
     "migrate:generate": "ts-node -P tsconfig.scripts.json ./scripts/generateDataMigrations.ts",
     "migrate:diff": "ts-node -P tsconfig.scripts.json ./scripts/diffDataMigrations.ts",
