--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@directus/sdk-js": "9.0.0-rc.51",
+    "@meilisearch/instant-meilisearch": "0.4.1",
     "@sentry/browser": "6.2.4",
     "@sentry/integrations": "6.2.4",
     "@sentry/node": "6.2.4",
@@ -35,6 +36,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "4.2.0",
+    "react-instantsearch-dom": "6.10.3",
     "react-modal": "3.12.1",
     "react-player": "2.9.0",
     "react-quill": "2.0.0-beta.2",
@@ -46,6 +48,7 @@
     "@types/he": "1.1.1",
     "@types/node": "14.14.35",
     "@types/react": "17.0.3",
+    "@types/react-instantsearch-dom": "6.10.0",
     "@types/react-modal": "3.12.0",
     "@types/styled-components": "5.1.9",
     "@typescript-eslint/eslint-plugin": "4.18.0",
