feat: secure search with tokens and fix auto indexing

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -14,5 +14,8 @@ services:
       - ./:/usr/src/app
     network_mode: host
 
+  community_search:
+    network_mode: host
+
   wait:
     network_mode: host
