--- a/docker-compose.stag.yml
+++ b/docker-compose.stag.yml
@@ -11,5 +11,8 @@ services:
       network: host
     network_mode: host
 
+  community_search:
+    network_mode: host
+
   wait:
     network_mode: host
