--- a/env.example
+++ b/env.example
@@ -33,6 +33,13 @@ DB_DATABASE=community_dev
 DB_USER=prodev
 DB_PASSWORD=prodev-pass
 
+CACHE_ENABLED=true
+CACHE_STORE=redis
+CACHE_REDIS=redis://localhost:6379
+CACHE_AUTO_PURGE=true
+CACHE_TTL=1h
+ASSETS_CACHE_TTL=7d
+
 ADMIN_EMAIL=dev@prodeko.org
 ADMIN_PASSWORD=lihamaito
 
