--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-modal": "3.12.1",
     "react-player": "2.9.0",
     "react-quill": "2.0.0-beta.2",
+    "react-tooltip-lite": "1.12.0",
     "react-use": "17.2.1",
     "styled-components": "5.2.1",
     "swr": "0.5.5"
