--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-hot-toast": "1.0.2",
     "react-icons": "4.2.0",
     "react-instantsearch-dom": "6.10.3",
     "react-modal": "3.12.1",
